<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_heroImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@android:drawable/ic_menu_camera"
      />
    <EditText
        android:id="@+id/et_hero_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_heroImage"
        android:layout_alignTop="@id/iv_heroImage"
        android:layout_marginStart="16dp"
        android:hint="@string/superhero_name"
        />
    <EditText
        android:id="@+id/et_real_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_heroImage"
        android:layout_alignBottom="@id/iv_heroImage"
        android:layout_marginStart="16dp"
        android:hint="@string/real_name"
        />

    <View
        android:id="@+id/v_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/iv_heroImage"
        android:background="@color/black"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:id="@+id/tv_Bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_separator"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
       android:text="@string/bio_main"
        android:textColor="@color/black"
        android:gravity="center"
       />
    <EditText
        android:id="@+id/et_Bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_Bio"
        android:layout_marginTop="16dp"
        android:hint="@string/short_bio_main"
        />
    <TextView
        android:id="@+id/tv_Power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Bio"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/power_main"
        android:gravity="center"/>
    <RatingBar
        android:id="@+id/rb_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_Power"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:progressTint="@color/yellow"
        android:progressBackgroundTint="@color/grey"/>
    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/save"
        android:layout_alignParentBottom="true"
        />



</RelativeLayout>
</ScrollView>